# filterflow

./: LICENSE  README.md  pyproject.toml
filterflow/: __init__.py  flow.py
processflow/: __init__.py
tests/: test_filterflow.py  test_process_flow.py
