[tool.poetry]
name = "filterflow"
version = "0.1.1"
description = "A library to create data flow charts."
authors = ["Levi Waddingham"]
readme = 'README.md'
repository = 'https://github.com/LeviWadd/filterflow'

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
